--- a/arch/arm64/configs/lineage_x2_defconfig
+++ b/arch/arm64/configs/lineage_x2_defconfig
@@ -44,7 +44,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-lineage"
+CONFIG_LOCALVERSION="-lineage-sdv22"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -92,7 +92,7 @@ CONFIG_HIGH_RES_TIMERS=y
 #
 # CONFIG_TICK_CPU_ACCOUNTING is not set
 # CONFIG_VIRT_CPU_ACCOUNTING_GEN is not set
-CONFIG_IRQ_TIME_ACCOUNTING=y
+# CONFIG_IRQ_TIME_ACCOUNTING=y
 # CONFIG_SCHED_WALT is not set
 # CONFIG_BSD_PROCESS_ACCT is not set
 CONFIG_TASKSTATS=y
@@ -112,9 +112,11 @@ CONFIG_RCU_FANOUT=64
 CONFIG_RCU_FANOUT_LEAF=16
 # CONFIG_RCU_FANOUT_EXACT is not set
 CONFIG_RCU_FAST_NO_HZ=y
+CONFIG_RCU_KTHREAD_PRIO=6
+CONFIG_RCU_BOOST_DELAY=500
 # CONFIG_TREE_RCU_TRACE is not set
-# CONFIG_RCU_BOOST is not set
-# CONFIG_RCU_NOCB_CPU is not set
+CONFIG_RCU_BOOST=y
+CONFIG_RCU_NOCB_CPU=y
 CONFIG_BUILD_BIN2C=y
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
@@ -123,7 +125,7 @@ CONFIG_LOG_BUF_SHIFT=17
 CONFIG_LOG_CPU_MAX_BUF_SHIFT=15
 CONFIG_GENERIC_SCHED_CLOCK=y
 CONFIG_CGROUPS=y
-CONFIG_CGROUP_DEBUG=y
+#CONFIG_CGROUP_DEBUG=y
 CONFIG_CGROUP_FREEZER=y
 # CONFIG_CGROUP_DEVICE is not set
 CONFIG_CPUSETS=y
@@ -140,7 +142,7 @@ CONFIG_RT_GROUP_SCHED=y
 CONFIG_SCHED_HMP=y
 # CONFIG_SCHED_HMP_CSTATE_AWARE is not set
 CONFIG_SCHED_CORE_CTL=y
-# CONFIG_SCHED_QHMP is not set
+CONFIG_SCHED_QHMP=y
 # CONFIG_CHECKPOINT_RESTORE is not set
 CONFIG_NAMESPACES=y
 # CONFIG_UTS_NS is not set
@@ -230,9 +232,9 @@ CONFIG_CC_STACKPROTECTOR=y
 CONFIG_CC_STACKPROTECTOR_REGULAR=y
 # CONFIG_CC_STACKPROTECTOR_STRONG is not set
 CONFIG_HAVE_CONTEXT_TRACKING=y
-CONFIG_HAVE_VIRT_CPU_ACCOUNTING_GEN=y
+#CONFIG_HAVE_VIRT_CPU_ACCOUNTING_GEN=y
 CONFIG_HAVE_IRQ_TIME_ACCOUNTING=y
-CONFIG_HAVE_ARCH_TRANSPARENT_HUGEPAGE=y
+#CONFIG_HAVE_ARCH_TRANSPARENT_HUGEPAGE=y
 CONFIG_MODULES_USE_ELF_RELA=y
 CONFIG_HAVE_ARCH_MMAP_RND_BITS=y
 CONFIG_ARCH_MMAP_RND_BITS=18
@@ -379,11 +381,11 @@ CONFIG_ARCH_NR_GPIO=1024
 # CONFIG_PREEMPT_VOLUNTARY is not set
 CONFIG_PREEMPT=y
 CONFIG_PREEMPT_COUNT=y
-# CONFIG_HZ_100 is not set
+CONFIG_HZ_100=y
 # CONFIG_HZ_250 is not set
-CONFIG_HZ_300=y
+#CONFIG_HZ_300=y
 # CONFIG_HZ_1000 is not set
-CONFIG_HZ=300
+CONFIG_HZ=100
 CONFIG_SCHED_HRTICK=y
 CONFIG_ARCH_HAS_HOLES_MEMORYMODEL=y
 CONFIG_ARCH_SPARSEMEM_ENABLE=y
@@ -481,6 +483,7 @@ CONFIG_COMPAT=y
 #
 CONFIG_SUSPEND=y
 CONFIG_SUSPEND_FREEZER=y
+CONFIG_HAS_EARLYSUSPEND=y
 CONFIG_WAKELOCK=y
 CONFIG_PM_SLEEP=y
 CONFIG_PM_SLEEP_SMP=y
@@ -493,10 +496,10 @@ CONFIG_PM=y
 # CONFIG_PM_DEBUG is not set
 CONFIG_PM_OPP=y
 CONFIG_PM_CLK=y
-# CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_CPU_PM=y
 CONFIG_SUSPEND_TIME=y
-# CONFIG_DEDUCE_WAKEUP_REASONS is not set
+CONFIG_DEDUCE_WAKEUP_REASONS=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM64_CPU_SUSPEND=y
 
@@ -517,6 +520,9 @@ CONFIG_CPU_IDLE_GOV_MENU=y
 #
 # CONFIG_ARM64_CPUIDLE is not set
 # CONFIG_ARCH_NEEDS_CPU_IDLE_COUPLED is not set
+CONFIG_ARM_PSCI=y
+# CONFIG_CPU_V7=y
+
 
 #
 # CPU Frequency scaling
@@ -811,7 +817,7 @@ CONFIG_IP_NF_TARGET_REDIRECT=y
 CONFIG_IP_NF_MANGLE=y
 # CONFIG_IP_NF_TARGET_CLUSTERIP is not set
 # CONFIG_IP_NF_TARGET_ECN is not set
-# CONFIG_IP_NF_TARGET_TTL is not set
+CONFIG_IP_NF_TARGET_TTL=y
 CONFIG_IP_NF_RAW=y
 CONFIG_IP_NF_SECURITY=y
 CONFIG_IP_NF_ARPTABLES=y
@@ -1746,8 +1752,8 @@ CONFIG_INPUT_TABLET=y
 # CONFIG_TABLET_USB_KBTAB is not set
 # CONFIG_TABLET_SERIAL_WACOM4 is not set
 CONFIG_INPUT_TOUCHSCREEN=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_v21=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C_v21=y
+#CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_v21=y
+#CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C_v21=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_SPI_v21 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE_v21 is not set
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_V26=y
@@ -1755,6 +1761,7 @@ CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C_V26=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_SPI_V26 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_HID_I2C_V26 is not set
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE_V26=y
+CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_DEV_V26=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_V26=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_TEST_REPORTING_V26=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_ACTIVE_PEN_V26 is not set
@@ -2762,6 +2769,7 @@ CONFIG_FB_MSM_MDSS_HDMI_PANEL=y
 # CONFIG_FB_MSM_MDSS_MDP3 is not set
 # CONFIG_FB_MSM_MDSS_XLOG_DEBUG is not set
 # CONFIG_FB_MSM_MDSS_FRC_DEBUG is not set
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 # CONFIG_FB_SSD1307 is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_LCD_CLASS_DEVICE=y
@@ -3784,6 +3792,7 @@ CONFIG_MSM_KERNEL_PROTECT=y
 CONFIG_QCOM_SMCINVOKE=y
 # CONFIG_QCOM_EARLY_RANDOM is not set
 # CONFIG_WCD_DSP_GLINK is not set
+CONFIG_STATE_NOTIFIER=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
 # CONFIG_SOC_TI is not set
 CONFIG_PM_DEVFREQ=y
@@ -3806,6 +3815,7 @@ CONFIG_DEVFREQ_GOV_MSM_BW_HWMON=y
 CONFIG_DEVFREQ_GOV_MSM_CACHE_HWMON=y
 CONFIG_DEVFREQ_GOV_SPDM_HYP=y
 CONFIG_DEVFREQ_GOV_MEMLAT=y
+CONFIG_ADRENO_IDLER=y
 
 #
 # DEVFREQ Drivers
@@ -3951,7 +3961,7 @@ CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
-# CONFIG_NTFS_FS is not set
+CONFIG_NTFS_FS=y
 
 #
 # Pseudo filesystems
@@ -4477,3 +4487,4 @@ CONFIG_ARCH_HAS_SG_CHAIN=y
 CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
 # CONFIG_STRICT_MEMORY_RWX is not set
+CONFIG_LCD_NOTIFIER=y
