--- a/arch/arm64/configs/lineage_x2_defconfig
+++ b/arch/arm64/configs/lineage_x2_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.18.63 Kernel Configuration
+# Linux/arm64 3.18.109 Kernel Configuration
 #
 CONFIG_VENDOR_LEECO=y
 CONFIG_ARM64=y
@@ -238,6 +238,7 @@ CONFIG_HAVE_ARCH_MMAP_RND_BITS=y
 CONFIG_ARCH_MMAP_RND_BITS=18
 CONFIG_HAVE_ARCH_MMAP_RND_COMPAT_BITS=y
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS=16
+CONFIG_ARCH_HAS_ELF_RANDOMIZE=y
 CONFIG_CLONE_BACKWARDS=y
 CONFIG_OLD_SIGSUSPEND3=y
 CONFIG_COMPAT_OLD_SIGACTION=y
@@ -288,10 +289,22 @@ CONFIG_BLOCK_COMPAT=y
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_TEST=y
 CONFIG_IOSCHED_DEADLINE=y
+CONFIG_IOSCHED_MAPLE=y
 CONFIG_IOSCHED_CFQ=y
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_SIO=y
+CONFIG_IOSCHED_ZEN=y
+# CONFIG_IOSCHED_SIOPLUS is not set
+CONFIG_IOSCHED_TRIPNDROID=y
+# CONFIG_IOSCHED_BFQ is not set
 # CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_CFQ is not set
+# CONFIG_DEFAULT_MAPLE is not set
 CONFIG_DEFAULT_NOOP=y
+# CONFIG_DEFAULT_SIO is not set
+# CONFIG_DEFAULT_FIOPS is not set
+# CONFIG_DEFAULT_ZEN is not set
+# CONFIG_DEFAULT_TRIPNDROID is not set
 CONFIG_DEFAULT_IOSCHED="noop"
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
@@ -434,6 +447,8 @@ CONFIG_FORCE_ALLOC_FROM_DMA_ZONE=y
 CONFIG_SECCOMP=y
 # CONFIG_XEN is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
+CONFIG_UNMAP_KERNEL_AT_EL0=y
+CONFIG_HARDEN_BRANCH_PREDICTOR=y
 CONFIG_ARMV8_DEPRECATED=y
 CONFIG_SWP_EMULATION=y
 CONFIG_CP15_BARRIER_EMULATION=y
@@ -485,6 +500,10 @@ CONFIG_PM_WAKELOCKS_LIMIT=0
 CONFIG_PM_RUNTIME=y
 CONFIG_PM=y
 CONFIG_PM_DEBUG=y
+# CONFIG_PM_ADVANCED_DEBUG is not set
+# CONFIG_PM_TEST_SUSPEND is not set
+CONFIG_PM_SLEEP_DEBUG=y
+# CONFIG_DPM_WATCHDOG is not set
 CONFIG_PM_OPP=y
 CONFIG_PM_CLK=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
@@ -511,8 +530,6 @@ CONFIG_CPU_IDLE_GOV_MENU=y
 #
 # CONFIG_ARM64_CPUIDLE is not set
 # CONFIG_ARCH_NEEDS_CPU_IDLE_COUPLED is not set
-CONFIG_ARM_PSCI=y
-CONFIG_CPU_V7=
 
 #
 # CPU Frequency scaling
@@ -526,30 +543,16 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_LIONHEART is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVEX is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SCHED is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_NEBULA is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LIONFISH is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_ACTIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_IMPULSE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_BIOSHOCK is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_NIGHTMARE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_ALUCARD is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_DESPAIR is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_YANKACTIVE is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_NEBULA=y
-CONFIG_CPU_FREQ_GOV_IMPULSE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_FREQ_GOV_CONSERVATIVEX=y
 # CONFIG_CPU_FREQ_GOV_SCHED is not set
 
 #
@@ -557,17 +560,8 @@ CONFIG_CPU_FREQ_GOV_CONSERVATIVEX=y
 #
 CONFIG_CPU_FREQ_GOV_LIONFISH=y
 CONFIG_CPU_FREQ_GOV_DARKNESS=y
-CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
-CONFIG_CPU_FREQ_GOV_SMARTMAX=y
-CONFIG_CPU_FREQ_GOV_NIGHTMARE=y
-CONFIG_CPU_FREQ_GOV_ALUCARD=y
-CONFIG_CPU_FREQ_GOV_DESPAIR=y
 # CONFIG_CPUFREQ_DT is not set
-CONFIG_CPU_FREQ_GOV_WHEATLEY=y
-CONFIG_CPU_FREQ_GOV_BIOSHOCK=y
-CONFIG_CPU_FREQ_GOV_YANKACTIVE=y
 CONFIG_CPU_BOOST=y
-CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 CONFIG_FINGERPRINT_BOOST=y
 
 #
@@ -1039,7 +1033,7 @@ CONFIG_WEXT_PROC=y
 CONFIG_WEXT_SPY=y
 CONFIG_WEXT_PRIV=y
 CONFIG_CFG80211=y
-# CONFIG_NL80211_TESTMODE is not set
+CONFIG_NL80211_TESTMODE=y
 # CONFIG_CFG80211_DEVELOPER_WARNINGS is not set
 # CONFIG_CFG80211_REG_DEBUG is not set
 # CONFIG_CFG80211_CERTIFICATION_ONUS is not set
@@ -1082,6 +1076,7 @@ CONFIG_FIRMWARE_IN_KERNEL=y
 CONFIG_EXTRA_FIRMWARE=""
 CONFIG_FW_LOADER_USER_HELPER=y
 CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
+# CONFIG_FW_CACHE is not set
 CONFIG_WANT_DEV_COREDUMP=y
 CONFIG_ALLOW_DEV_COREDUMP=y
 CONFIG_DEV_COREDUMP=y
@@ -1094,7 +1089,6 @@ CONFIG_SOC_BUS=y
 CONFIG_REGMAP=y
 CONFIG_REGMAP_I2C=y
 CONFIG_REGMAP_SPI=y
-CONFIG_REGMAP_SWR=y
 CONFIG_REGMAP_ALLOW_WRITE_DEBUGFS=y
 CONFIG_DMA_SHARED_BUFFER=y
 # CONFIG_FENCE_TRACE is not set
@@ -1339,7 +1333,6 @@ CONFIG_MD=y
 CONFIG_BLK_DEV_DM_BUILTIN=y
 CONFIG_BLK_DEV_DM=y
 # CONFIG_DM_DEBUG is not set
-CONFIG_DM_BUFIO=y
 CONFIG_DM_CRYPT=y
 CONFIG_DM_REQ_CRYPT=y
 # CONFIG_DM_SNAPSHOT is not set
@@ -1355,8 +1348,6 @@ CONFIG_DM_UEVENT=y
 # CONFIG_DM_FLAKEY is not set
 # CONFIG_DM_VERITY is not set
 # CONFIG_DM_VERITY_HASH_PREFETCH_MIN_SIZE_128 is not set
-# CONFIG_DM_VERITY_HASH_PREFETCH_MIN_SIZE is not set
-# CONFIG_DM_VERITY_FEC is not set
 # CONFIG_DM_SWITCH is not set
 # CONFIG_DM_LOG_WRITES is not set
 # CONFIG_TARGET_CORE is not set
@@ -1705,6 +1696,7 @@ CONFIG_INPUT_EVDEV=y
 # CONFIG_INPUT_EVBUG is not set
 CONFIG_INPUT_KEYRESET=y
 CONFIG_INPUT_KEYCOMBO=y
+# CONFIG_SENSORS_HALL is not set
 
 #
 # Input Device Drivers
@@ -1777,10 +1769,8 @@ CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C_V26=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_SPI_V26 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_HID_I2C_V26 is not set
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE_V26=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_DEV_V26=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_V26=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_TEST_REPORTING_V26=y
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_PROXIMITY_V26 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_ACTIVE_PEN_V26 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_GESTURE_V26 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_VIDEO_V26 is not set
@@ -1870,6 +1860,8 @@ CONFIG_INPUT_GPIO=y
 CONFIG_INPUT_VL53L0=y
 CONFIG_INPUT_NXU810=y
 # CONFIG_INPUT_PIXART_OTS_PAT9125_SWITCH is not set
+# CONFIG_SENSORS_LTR553 is not set
+# CONFIG_SENSORS_BMA2X2 is not set
 # CONFIG_INPUT_FPC1020 is not set
 CONFIG_INPUT_GP5xx8=y
 
@@ -2530,6 +2522,7 @@ CONFIG_REGULATOR_SPM=y
 # CONFIG_REGULATOR_CPR is not set
 # CONFIG_REGULATOR_CPR2_GFX is not set
 CONFIG_REGULATOR_CPR3=y
+CONFIG_REGULATOR_CPR3_VOLTAGE_CONTROL=y
 CONFIG_REGULATOR_CPR3_HMSS=y
 CONFIG_REGULATOR_CPR3_MMSS=y
 # CONFIG_REGULATOR_CPR4_APSS is not set
@@ -2926,10 +2919,7 @@ CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_TAS5086 is not set
 # CONFIG_SND_SOC_TLV320AIC31XX is not set
 # CONFIG_SND_SOC_TLV320AIC3X is not set
-# CONFIG_SND_SOC_WCD9330 is not set
 CONFIG_SND_SOC_WCD9335=y
-# CONFIG_SND_SOC_WSA881X_SENSORS is not set
-# CONFIG_SND_SOC_WSA881X is not set
 CONFIG_SND_SOC_WCD9XXX=y
 CONFIG_SND_SOC_WCD9XXX_V2=y
 CONFIG_SND_SOC_WCD_CPE=y
@@ -3285,17 +3275,17 @@ CONFIG_USB_GADGET_STORAGE_NUM_BUFFERS=4
 # CONFIG_USB_CI13XXX_MSM_HSIC is not set
 # CONFIG_USB_DUMMY_HCD is not set
 CONFIG_USB_LIBCOMPOSITE=y
-# CONFIG_USB_F_ACM is not set
-# CONFIG_USB_U_SERIAL is not set
-# CONFIG_USB_F_SERIAL is not set
-# CONFIG_USB_F_NCM is not set
-# CONFIG_USB_F_ECM is not set
-# CONFIG_USB_F_MASS_STORAGE is not set
-# CONFIG_USB_F_FS is not set
-# CONFIG_USB_F_UAC1 is not set
-# CONFIG_USB_F_UAC2 is not set
-# CONFIG_USB_F_UVC is not set
-# CONFIG_USB_F_AUDIO_SRC is not set
+CONFIG_USB_F_ACM=y
+CONFIG_USB_U_SERIAL=y
+CONFIG_USB_F_SERIAL=y
+CONFIG_USB_F_NCM=y
+CONFIG_USB_F_ECM=y
+CONFIG_USB_F_MASS_STORAGE=y
+CONFIG_USB_F_FS=y
+CONFIG_USB_F_UAC1=y
+CONFIG_USB_F_UAC2=y
+CONFIG_USB_F_UVC=y
+CONFIG_USB_F_AUDIO_SRC=y
 # CONFIG_USB_CONFIGFS is not set
 CONFIG_USB_G_ANDROID=y
 # CONFIG_USB_ANDROID_RNDIS_DWORD_ALIGNED is not set
@@ -3381,6 +3371,7 @@ CONFIG_LEDS_LM3530=y
 # CONFIG_LEDS_INTEL_SS4200 is not set
 # CONFIG_LEDS_LT3593 is not set
 # CONFIG_LEDS_TCA6507 is not set
+# CONFIG_LEDS_TLC591XX is not set
 # CONFIG_LEDS_LM355x is not set
 
 #
@@ -3620,7 +3611,6 @@ CONFIG_WLAN_FEATURE_NAN=y
 CONFIG_QCOM_TDLS=y
 CONFIG_QCOM_LTE_COEX=y
 # CONFIG_WLAN_SYNC_TSF is not set
-CONFIG_WLAN_FEATURE_MEMDUMP=y
 CONFIG_WLAN_OFFLOAD_PACKETS=y
 CONFIG_QCA_WIFI_AUTOMOTIVE_CONC=y
 CONFIG_WLAN_UDP_RESPONSE_OFFLOAD=y
@@ -3683,6 +3673,7 @@ CONFIG_REMOTE_SPINLOCK_MSM=y
 CONFIG_CLKSRC_OF=y
 CONFIG_ARM_ARCH_TIMER=y
 CONFIG_ARM_ARCH_TIMER_EVTSTREAM=y
+# CONFIG_ARM_ARCH_TIMER_VCT_ACCESS is not set
 # CONFIG_ATMEL_PIT is not set
 # CONFIG_SH_TIMER_CMT is not set
 # CONFIG_SH_TIMER_MTU2 is not set
@@ -4267,6 +4258,7 @@ CONFIG_ARCH_HAS_UBSAN_SANITIZE_ALL=y
 # Security options
 #
 CONFIG_KEYS=y
+CONFIG_KEYS_COMPAT=y
 # CONFIG_PERSISTENT_KEYRINGS is not set
 # CONFIG_BIG_KEYS is not set
 CONFIG_ENCRYPTED_KEYS=y
@@ -4494,8 +4486,5 @@ CONFIG_LIBFDT=y
 CONFIG_UCS2_STRING=y
 CONFIG_ARCH_HAS_SG_CHAIN=y
 CONFIG_QMI_ENCDEC=y
-# CONFIG_POWERSUSPEND is not set
 # CONFIG_QMI_ENCDEC_DEBUG is not set
 # CONFIG_STRICT_MEMORY_RWX is not set
-CONFIG_REGULATOR_CPR3_VOLTAGE_CONTROL=y
-CONFIG_FINGERPRINT_BOOST=y
